--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -44,16 +44,16 @@
 
 .navbar {
   display: flex; /* Allow elements to sit side-by-side */
-  justify-content: space-between; /* Distribute content horizontally with spacing */
-  width: 100vw; /* Set width to 100% of viewport width */
-  height: 8vh; /* Set height to 100% of viewport height */
+  width: 75vw; /* Set width to 75% of viewport width */
+  height: 70px; /* Set height to 100% of viewport height */
   position: fixed; /* Fix the navbar to the top */
   top: 0; /* Position at the top of the viewport */
+  right: 0; /* Position at the right edge of the viewport */
   background-color: #f1f1f1; /* Set background color */
 }
 
 .nav-content {
-  padding: 15px 30px;
+  padding: 20px 20px;
 }
 
 .nav-link {
@@ -68,8 +68,4 @@
   background-color: #ddd;
 }
 
-/* New style for right-side margin */
-.navbar > .nav-content {
-  margin-right: 25%; /* Set right margin to 25% */
-}
 
