--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -41,18 +41,30 @@
   color: #888;
 }
 
-
 .navbar {
-  display: flex; /* Allow elements to sit side-by-side */
-  width: 75vw; /* Set width to 75% of viewport width */
-  height: 70px; /* Set height to 100% of viewport height */
-  position: fixed; /* Fix the navbar to the top */
-  top: 0; /* Position at the top of the viewport */
-  right: 0; /* Position at the right edge of the viewport */
-  background-color: #f1f1f1; /* Set background color */
+  display: flex; 
+  justify-content: flex-end; /* Align navbar content to the right */
+  width: calc(75vw - 25px); /* Adjust width to accommodate left sidebar */
+  height: 70px; 
+  position: fixed; 
+  top: 0; 
+  left: 25vw; /* Position navbar after the left-side bar */
+  background-color: #f1f1f1; 
+}
+
+.left-side {
+  position: fixed; /* Fix the left sidebar */
+  top: 0; 
+  left: 0; /* Position left sidebar at the leftmost side */
+  background-color: rgb(1, 1, 34); 
+  height: 100vh; 
+  width: 25vw; 
+  
 }
 
 .nav-content {
+  display: flex;
+  flex-direction: row;
   padding: 20px 20px;
 }
 
@@ -66,6 +78,84 @@
 
 .active {
   background-color: #ddd;
+}
+
+.main {
+  width: 100vw; /* Set width to 100% of viewport width */
+  height: 100vh; /* Set height to 100% of viewport height */
+}
+
+.profile{
+  height: 100px;
+  width: 120px;
+  border-radius:50px;
+  background-color: azure;
+  margin-left: 150px;
+  margin-top: 50px;
+  padding-bottom: 20px;
+}
+
+/* .bottom-left{
+  width: 25vw;
+  height: 250px;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 0px;
+  
+}
+
+.up{
+  background-color: aliceblue;
+  width: auto;
+  height: 30px;
+  display: flex;
+  flex-direction: row;
+}
+
+.box{
+  height: 80px;
+  width: 80px;
+  background-color: beige;
+  padding-left: 10px;
+  
+} */
+
+
+.bottom-left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 20px;
+  margin-top: 200px;
+}
+
+.up {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.down {
+  display: flex;
+  width: 100%;
+}
+
+
+
+.box {
+  height: 140px;
+  width: 200px;
+  background-color: rgba(255, 255, 255, 0.208); /* Use rgba for transparency */
+  border-radius: 8px;
+  padding: 5px;
+  margin-left: 40px;
+  margin-right: 40px;
+  backdrop-filter: blur(8px); /* Apply blur effect to background */
+  box-shadow: 0 8px 32px 0 rgba(34, 41, 134, 0.37); /* Add box shadow for depth */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 
