--- a/frontend/src/pages/login/Login.css
+++ b/frontend/src/pages/login/Login.css
@@ -2,8 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 30%;
-    width: 70vw;
+    height: 100vh;
   }
   
   .signup-left {
@@ -22,7 +21,6 @@
     background-color: #f9f9f9;
     border-radius: 8px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    text-align: left;
   }
   
   .signup-right h2 {
@@ -32,8 +30,6 @@
   
   .form-group {
     margin-bottom: 20px;
-    display: flex;
-    margin-right: 5px;
   }
   
   .form-group label {
@@ -64,13 +60,8 @@
     background-color: #0056b3;
   }
   
-  .spacing{
-    margin-right: 100px;
-  }
-
   body{
     /* height: 100vh;
     width: 100vw; */
     background-color: #DFF5FF;
   }
-
