Provided functionalities to the learn page

--- a/frontend/src/components/dropdown/dropdown.css
+++ b/frontend/src/components/dropdown/dropdown.css
@@ -1,7 +1,7 @@
 .dropdown-container {
     /* margin-top: 10px; */
     width: 600px;
-    background-color: #EBC49F;
+    background-color: #91d5f5;
     border-radius: 8px; /* Rounded corners */
     padding: 10px 20px; /* Add padding for content */
     margin: 10px 0; /* Spacing between dropdowns */
