--- a/frontend/src/pages/learn/learn.css
+++ b/frontend/src/pages/learn/learn.css
@@ -26,7 +26,7 @@
   .dropdown-container {
     /* margin-top: 10px; */
     width: 700px;
-    background-color: #EBC49F;
+    background-color: #91d5f5;
     border-radius: 8px; /* Rounded corners */
     padding: 10px 20px; /* Add padding for content */
     margin: 10px 0; /* Spacing between dropdowns */
@@ -43,7 +43,11 @@
     margin-right: 10px; /* Spacing between icon and text */
   }
 
-  .sizing{
-
+  .align{
+    display: flex;
+    height: 20px;
+    width: 20px;
+    cursor: pointer;
+    margin-left: 500px;
   }
   
