--- a/frontend/src/pages/learn/learn.css
+++ b/frontend/src/pages/learn/learn.css
@@ -43,7 +43,78 @@
     margin-right: 10px; /* Spacing between icon and text */
   }
 
-  .sizing{
-
+ 
+  .right{
+    height: 100vh;
+    width: 350px;
+    background-color: rgb(1, 1, 34);
+    margin-left: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
   
+  .middle{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .mid-con{
+    margin-left: 10px;
+  }
+
+  .right1{
+    width: 350px;
+    height: 350px;
+   
+    margin: 5px 0 5px;
+  }
+
+  .right2{
+    width: 350px;
+    height: 250px;
+    margin-top: 20px;
+  }
+
+  .modal {
+    position: fixed; /* Fixed position */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  }
+  
+  .close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+  }
+
+input[type="text"],
+input[type="number"] {
+  height: 20px; /* Adjust the value as needed */
+  /* Add any other styling you want */
+}
+
+button[type="submit"] {
+  height: 40px; 
+  width: 100px;
+  
+}
+
+.head{
+  color: white;
+}
